fix(VBreadcrumbs): set overflow-x to auto

--- a/packages/vuetify/src/components/VBreadcrumbs/VBreadcrumbs.sass
+++ b/packages/vuetify/src/components/VBreadcrumbs/VBreadcrumbs.sass
@@ -6,6 +6,7 @@
   align-items: center
   line-height: $breadcrumbs-line-height
   padding: $breadcrumbs-padding-y $breadcrumbs-padding-x
+  overflow-x: auto
 
   &--rounded
     @include tools.rounded($breadcrumbs-rounded-border-radius)
